--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "weather-app-react-native",
-  "version": "1.0.0",
-  "description": "First react native app through a tutorial",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cml2377/weather-app-react-native.git"
+  "dependencies": {
+    "expo": "~36.0.0",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-web": "~0.11.7"
   },
-  "keywords": [
-    "weather",
-    "react",
-    "native",
-    "tutorial"
-  ],
-  "author": "Crystal Ly",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cml2377/weather-app-react-native/issues"
+  "devDependencies": {
+    "babel-preset-expo": "~8.0.0",
+    "@babel/core": "^7.0.0"
   },
-  "homepage": "https://github.com/cml2377/weather-app-react-native#readme"
+  "private": true
 }
